[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprite/effect/ghost_bullet/3.png" type="Texture" id=1]
[ext_resource path="res://Sprite/effect/ghost_bullet/1.png" type="Texture" id=2]
[ext_resource path="res://Sprite/effect/ghost_bullet/2.png" type="Texture" id=3]
[ext_resource path="res://Sprite/effect/ghost_bullet/4.png" type="Texture" id=4]
[ext_resource path="res://Sprite/effect/ghost_bullet/6.png" type="Texture" id=5]
[ext_resource path="res://Sprite/effect/ghost_bullet/5.png" type="Texture" id=6]
[ext_resource path="res://script/ghost/ATK/Ghost_bullet.gd" type="Script" id=7]
[ext_resource path="res://sound/ghost_shoot.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "gb2",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 12.855

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[node name="Ghost_bullet" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 360
collision_mask = 360
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "gb2"
frame = 1
speed_scale = 2.0
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 33
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="shoot_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
